Use perfect-scrollbar for info container to have constant height (fixes #65)

--- a/GetIt.UI/sass/main.sass
+++ b/GetIt.UI/sass/main.sass
@@ -1,4 +1,4 @@
-
+@import "../node_modules/perfect-scrollbar/css/perfect-scrollbar.css"
 
 html
   overflow-y: auto
@@ -58,7 +58,8 @@ body
     :first-child
       margin-right: 10px
 #info
-  overflow-x: auto
+  overflow: hidden
+  position: relative
   background: lightgray
   padding: 10px 20px
   #inner-info
